# obs_plugins_CI_deps

./: CMakeLists.txt  README.md  azure-pipelines.yml  install-script-linux.sh  install-script-osx.sh  install-script-win.cmd  install-script.sh  main.cpp  post-install-script-osx.sh  post-install-script-win.cmd
